neocore2/third_party/joltc-sys/src/bindings_static.rs


#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_BodyManager_DrawSettings {
    pub mDrawGetSupportFunction: bool,
    pub mDrawSupportDirection: bool,
    pub mDrawGetSupportingFace: bool,
    pub mDrawShape: bool,
    pub mDrawShapeWireframe: bool,
    pub mDrawShapeColor: JPC_ShapeColor,
    pub mDrawBoundingBox: bool,
    pub mDrawCenterOfMassTransform: bool,
    pub mDrawWorldTransform: bool,
    pub mDrawVelocity: bool,
    pub mDrawMassAndInertia: bool,
    pub mDrawSleepStats: bool,
    pub mDrawSoftBodyVertices: bool,
    pub mDrawSoftBodyVertexVelocities: bool,
    pub mDrawSoftBodyEdgeConstraints: bool,
    pub mDrawSoftBodyBendConstraints: bool,
    pub mDrawSoftBodyVolumeConstraints: bool,
    pub mDrawSoftBodySkinConstraints: bool,
    pub mDrawSoftBodyLRAConstraints: bool,
    pub mDrawSoftBodyPredictedBounds: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_DebugRendererSimpleFns {
    pub DrawLine: Option<unsafe extern "C" fn(*const c_void, JPC_RVec3, JPC_RVec3, JPC_Color)>, 
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_TriangleShapeSettings {
    pub UserData: u64,
    pub Density: f32,
    pub V1: JPC_Vec3,
    pub V2: JPC_Vec3,
    pub V3: JPC_Vec3,
    pub ConvexRadius: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_BoxShapeSettings {
    pub UserData: u64,
    pub Density: f32,
    pub HalfExtent: JPC_Vec3,
    pub ConvexRadius: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_SphereShapeSettings {
    pub UserData: u64,
    pub Density: f32,
    pub Radius: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_CapsuleShapeSettings {
    pub UserData: u64,
    pub Density: f32,
    pub Radius: f32,
    pub HalfHeightOfCylinder: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_CylinderShapeSettings {
    pub UserData: u64,
    pub Density: f32,
    pub HalfHeight: f32,
    pub Radius: f32,
    pub ConvexRadius: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_ConvexHullShapeSettings {
    pub UserData: u64,
    pub Density: f32,
    pub Points: *const JPC_Vec3,
    pub PointsLen: usize,
    pub MaxConvexRadius: f32,
    pub MaxErrorConvexRadius: f32,
    pub HullTolerance: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_MeshShapeSettings {
    pub UserData: u64,
    pub Vertices: *const JPC_Float3,
    pub VerticesLen: usize,
    pub Triangles: *const JPC_IndexedTriangle,
    pub TrianglesLen: usize,
    pub MaxTrianglesPerLeaf: c_uint,
    pub ActiveEdgeCosThresholdAngle: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_HeightFieldShapeSettings {
    pub UserData: u64,
    pub Samples: *const f32,
    pub SampleCount: u32,
    pub Offset: JPC_Vec3,
    pub Scale: JPC_Vec3,
    pub MinHeightValue: f32,
    pub MaxHeightValue: f32,
    pub BlockSize: u32,
    pub BitsPerSample: u32,
    pub ActiveEdgeCosThresholdAngle: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_SubShapeSettings {
    pub Shape: *const JPC_Shape,
    pub Position: JPC_Vec3,
    pub Rotation: JPC_Quat,
    pub UserData: u32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_StaticCompoundShapeSettings {
    pub UserData: u64,
    pub SubShapes: *const JPC_SubShapeSettings,
    pub SubShapesLen: usize,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_MutableCompoundShapeSettings {
    pub UserData: u64,
    pub SubShapes: *const JPC_SubShapeSettings,
    pub SubShapesLen: usize,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_BodyCreationSettings {
    pub Position: JPC_RVec3,
    pub Rotation: JPC_Quat,
    pub LinearVelocity: JPC_Vec3,
    pub AngularVelocity: JPC_Vec3,
    pub UserData: u64,
    pub ObjectLayer: JPC_ObjectLayer,
    pub MotionType: JPC_MotionType,
    pub AllowedDOFs: JPC_AllowedDOFs,
    pub AllowDynamicOrKinematic: bool,
    pub IsSensor: bool,
    pub CollideKinematicVsNonDynamic: bool,
    pub UseManifoldReduction: bool,
    pub ApplyGyroscopicForce: bool,
    pub MotionQuality: JPC_MotionQuality,
    pub EnhancedInternalEdgeRemoval: bool,
    pub AllowSleeping: bool,
    pub Friction: f32,
    pub Restitution: f32,
    pub LinearDamping: f32,
    pub AngularDamping: f32,
    pub MaxLinearVelocity: f32,
    pub MaxAngularVelocity: f32,
    pub GravityFactor: f32,
    pub NumVelocityStepsOverride: c_uint,
    pub NumPositionStepsOverride: c_uint,
    pub OverrideMassProperties: JPC_OverrideMassProperties,
    pub InertiaMultiplier: f32,
    pub Shape: *const JPC_Shape,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_NarrowPhaseQuery_CastRayArgs {
    pub Ray: JPC_RRayCast,
    pub Result: JPC_RayCastResult,
    pub BroadPhaseLayerFilter: *const JPC_BroadPhaseLayerFilter,
    pub ObjectLayerFilter: *const JPC_ObjectLayerFilter,
    pub BodyFilter: *const JPC_BodyFilter,
}

#[cfg(feature = "double-precision")] pub type JPC_RVec3 = JPC_DVec3;
#[cfg(not(feature = "double-precision"))] pub type JPC_RVec3 = JPC_Vec3;
#[cfg(feature = "double-precision")] pub type JPC_RMat44 = JPC_DMat44;
#[cfg(not(feature = "double-precision"))] pub type JPC_RMat44 = JPC_Mat44;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_ContactEvent {
    pub Body1ID: JPC_BodyID,
    pub Body2ID: JPC_BodyID,
    pub Body1UserData: u64,
    pub Body2UserData: u64,
    pub SubShapeID1: JPC_SubShapeID,
    pub SubShapeID2: JPC_SubShapeID,
    pub Point: JPC_RVec3,
    pub Normal: JPC_Vec3,
    pub PenetrationDepth: f32,
    pub EstimatedImpulse: f32,
}

pub type JPC_ContactEventCallback = Option<
    unsafe extern "C" fn(user_data: *mut c_void, event: *const JPC_ContactEvent),
>;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_ContactListenerFns {
    pub OnContactAdded: JPC_ContactEventCallback,
    pub OnContactPersisted: JPC_ContactEventCallback,
}

#[repr(C)] pub struct JPC_Body { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_ContactListener { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_BodyFilter { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_BodyInterface { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_BroadPhaseLayerFilter { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_BroadPhaseLayerInterface { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_DebugRendererSimple { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_IndexedTriangleList { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_JobSystemThreadPool { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_NarrowPhaseQuery { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_ObjectLayerFilter { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_ObjectLayerPairFilter { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_ObjectVsBroadPhaseLayerFilter { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_PhysicsSystem { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_Shape { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_String { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_TempAllocatorImpl { _unused: [u8; 0] }
#[repr(C)] pub struct JPC_VertexList { _unused: [u8; 0] }
